fix text align n position to cards inside casos de exito page

--- a/components.css
+++ b/components.css
@@ -151,7 +151,7 @@ Styleguide 4.3.0
 .spot-c-casos-item__text-center {
   position: absolute;
   margin-top: -204px;
-  margin-left: 80px;
+  margin-left: 56px;
 }
 
 .spot-c-casos-item__footer-info_right {
